added code to HTML file

--- a/index.html
+++ b/index.html
@@ -8,11 +8,52 @@
   </head>
   <body>
     <header id="header1">
-      <h1>Prework Study Guide111</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h1>Prework Study Guide</h1>
+      <img src="C:\Users\gabri\prework-study-guide\assets\bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes herexx -->
+      <section class="card" id="html-section">
+
+        <h2>HTML</h2>
+        <ul>
+          <li> The head element contains information about the webpage </li>
+          <li>The body element represent the visible content shown to the user</li>
+          <li>Also, the body element can contain lists, images and more elements </li>
+          <li>The footer contains general information such as contact number, work hours</li>
+
+        </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS can control the color, size, font of the text </li>
+          <li>Allows to sort images </li>
+          <li>Gives live and desing to your website</li>
+        </ul>
+        
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+   
+      </section>
+      
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Animates elements on a website </li>
+          <li>Improves the web interface </li>
+          <li>Updates infromation</li>
+        </ul>
+   
+      </section>
 
     </main>
 
