added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -16,10 +17,10 @@
 
         <h2>HTML</h2>
         <ul>
-          <li> The head element contains information about the webpage </li>
-          <li>The body element represent the visible content shown to the user</li>
-          <li>Also, the body element can contain lists, images and more elements </li>
-          <li>The footer contains general information such as contact number, work hours</li>
+          <li> The head element contains information about the webpage. </li>
+          <li>The body element represent the visible content shown to the user.</li>
+          <li>Also, the body element can contain lists, images and more elements. </li>
+          <li>The footer contains general information such as contact number, work hours.</li>
 
         </ul>
 
@@ -28,9 +29,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>CSS can control the color, size, font of the text </li>
-          <li>Allows to sort images </li>
-          <li>Gives live and desing to your website</li>
+          <li>CSS can control the color, size, font of the text. </li>
+          <li>Allows to sort images. </li>
+          <li>Gives live and desing to your website.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
         
    
