--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           <li>Animates elements on a website </li>
           <li>Improves the web interface </li>
           <li>Updates infromation</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
    
       </section>
